--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: "luobo::blogs" # the main title
 tagline: "属于 luobo 的 Blogs -> 欢迎阅读!" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  "Technology, Code and Love."
+  Technology, Code and Love.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
